--- a/examples/shuttle-port-vue/package.json
+++ b/examples/shuttle-port-vue/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@cosmjs/cosmwasm-stargate": "^0.31.0",
-    "@delphi-labs/shuttle-vue": "workspace:*",
+    "@dojo-trading/shuttle-vue": "workspace:*",
     "@tanstack/vue-query": "^4.29.20",
     "bech32": "^2.0.0",
     "bignumber.js": "^9.1.1",
