--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@delphi-labs/shuttle-react",
+  "name": "@dojo-trading/shuttle-react",
   "version": "3.24.0",
   "description": "Shuttle is open-source npm package designed to turn wallet connections into a plug-and-play Lego brick for Cosmos Dapps.",
   "keywords": [
@@ -37,7 +37,7 @@
     "react": ">=18"
   },
   "dependencies": {
-    "@delphi-labs/shuttle": "workspace:*",
+    "@dojo-trading/shuttle": "workspace:*",
     "tslib": "^2.6.0",
     "tsup": "^7.1.0",
     "use-local-storage-state": "^18.3.3",
