--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@delphi-labs/shuttle-vue",
+  "name": "@dojo-trading/shuttle-vue",
   "version": "3.24.0",
   "description": "Shuttle is open-source npm package designed to turn wallet connections into a plug-and-play Lego brick for Cosmos Dapps.",
   "keywords": [
@@ -37,7 +37,7 @@
     "vue": ">=3"
   },
   "dependencies": {
-    "@delphi-labs/shuttle": "workspace:*",
+    "@dojo-trading/shuttle": "workspace:*",
     "pinia": "^2.1.3",
     "tslib": "^2.6.0",
     "tsup": "^7.1.0",
